<resources>
    <string name="app_name">Baby Feeding Tracker MVVM</string>
    <string name="hint_username">Username</string>
    <string name="hint_station">Baby Name</string>
    <string name="button_login">Login</string>
    <string name="user_name_restrictions">Usuário deve conter entre 3 e 7 caracteres não especiais</string>
    <string name="station_name_restrictions">Station deve conter entre 6 e 30 caracteres não especiais</string>
    <string name="choose_color">Por favor selecione uma cor</string>
    <string name="check_internet_connection">Por favor, verifique se há conexão com a internet</string>
    <string name="empty_response_body">Empty response body</string>
    <string name="failed_status_code">Failed with status code %1$d</string>
    <string name="error_try_again">Ocorreu um erro, tente novamente mais tarde</string>



    <string name="username5">username</string>
    <string name="username4">username</string>
    <string name="username3">username</string>
    <string name="username2">username</string>
    <string name="username1">username</string>
    <string name="username0">username</string>

    <string name="time5">23:59</string>
    <string name="time4">23:59</string>
    <string name="time3">23:59</string>
    <string name="time2">23:59</string>
    <string name="time1">23:59</string>
    <string name="time0">23:59</string>

    <string name="amount5">999ml</string>
    <string name="amount4">999ml</string>
    <string name="amount3">999ml</string>
    <string name="amount2">999ml</string>
    <string name="amount1">999ml</string>
    <string name="amount0">999ml</string>

    <string name="average06">06h: 12.3</string>
    <string name="average12">12h: 12.3</string>
    <string name="average24">24h: 12.3</string>

    <string name="timerText">00:00</string>


</resources>